--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: swiggy-app
+  name: swiggy
   labels:
-    app: swiggy-app
+    app: swiggy
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: swiggy-app
+      app: swiggy
   template:
     metadata:
       labels:
-        app: swiggy-app
+        app: swiggy
     spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: swiggy-app
-        image: ashfaque9x/swiggy:${BUILD_NUMBER}
+        image: prasad6242/swiggy:${BUILD_NUMBER}
         imagePullPolicy: "Always"
         ports:
         - containerPort: 3000
