--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: swiggy
+        app: swiggypod
     spec:
       terminationGracePeriodSeconds: 30
       containers:
